--- a/favorites/awesome/book.html
+++ b/favorites/awesome/book.html
@@ -775,6 +775,14 @@
                         </tr>
                     </tbody>
                 </table>
+                <h2>在线图书馆 <span class="name">Web Library</span></h2>
+                <ul>
+                    <li><a href="https://www.zjlib.cn/" target="_blank" rel="noopener noreferrer">浙江图书馆 <span class="name">可以免费在线查阅《中国大百科全书》</span></a></li>
+                    <li><a href="https://new.shuge.org/" target="_blank" rel="noopener noreferrer">书格 <span class="name">在线古籍图书馆</span></a></li>
+                    <li><a href="https://developers.google.cn/machine-learning/crash-course/?hl=zh-cn" target="_blank" rel="noopener noreferrer">机器学习 <span class="name">Google的机器学习简易教程</span></a></li>
+                    <li><a href="hthttps://github.com/EbookFoundation/free-programming-books/blob/main/books/free-programming-books-zh.md" target="_blank" rel="noopener noreferrer">free-programming-books <span class="name">免费的中文编程电子书</span></a></li>
+                    <li><a href="https://book.tstrs.me/" target="_blank" rel="noopener noreferrer"><span style="color: #666;">i-Book.in </span><span class="name">基于分布式文件系统 IPFS 的电子书搜索引擎（已失效）</span></a></li>
+                </ul>
                 <div class="toolkit_flex" style="max-width: 1000px; padding: 1em 0 2em 0;">
                     <div style="background: #c1272d; width: 12px; height: 12px; border: solid 1px #333;"></div>
                     <div style="margin-left: 0.5em; font-size: 0.8em; font-weight: bold;">最近阅读</div>
