--- a/favorites/materials/materials.html
+++ b/favorites/materials/materials.html
@@ -25,11 +25,131 @@
                     <h1>素材</h1>
                 </div>
             </div>
+            <div class="note">
+                <h3>知识共享许可协议 <span class="name">Creative Commons License</span></h3>
+                <p>知识共享许可协议是一种公共著作权许可协议，其允许按照多种需求分发受著作权保护的作品。<br>
+                    一个作者可使用创作共享许可授予他人分享、使用，甚至创作派生作品的权利。<br>
+                    创作共享提供给作者灵活性（例如，他们可以选择允许非商业用途使用他们的作品）<br>
+                    保护使用或重新分配他人作品的人，所以他们只要遵守由作者指定的条件，而不必担心侵犯著作权。</p>
+                <br>
+                <p>其中，CC0 全称 <b>Creative Commons Zero</b>，意即「无版权」。<br>
+                    任何人均可对标记为 CC0 的作品进行复制、编辑和再发行，甚至可用作商业用途，均无需原作者同意或署名。<br>
+                    详细介绍可访问 <a href="https://creativecommons.org/licenses/" target="_blank" rel="noopener noreferrer">Creative Commons</a> 官网 了解。</p>
+                <h3>公共领域音乐 <span class="name">Public Domain Music</span></h3>
+                <ol>
+                    <li>创作时间早于1922年的美国音乐作品(Musical Works)</li>
+                    <li>受版权保护的作品版权保护期已经到期</li>
+                    <li>创作者自愿将作品放入公共领域</li>
+                </ol>
+            </div>
             <div class="flex_row_wrap">
                 <div class="list">
-                    <h2></h2>
+                    <h3>图片</h3>
                     <ul>
-                        <li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
+                        <li><a href="https://unsplash.com/" target="_blank" rel="noopener noreferrer">Unsplash</a></li>
+                        <li><a href="https://www.pexels.com/" target="_blank" rel="noopener noreferrer">Pexels</a></li>
+                        <li><a href="https://www.photock.jp/" target="_blank" rel="noopener noreferrer">Photock</a></li>
+                        <li><a href="https://stocksnap.io/" target="_blank" rel="noopener noreferrer">Stocksnap</a></li>
+                        <li><a href="https://magdeleine.co/" target="_blank" rel="noopener noreferrer">Magdeleine</a></li>
+                        <li><a href="https://www.foodiesfeed.com/" target="_blank" rel="noopener noreferrer">Foodiesfeed <span class="name">美食主题的免费图库</span></a></li>
+                        <li><a href="https://www.splitshire.com/" target="_blank" rel="noopener noreferrer">SplitShire</a></li>
+                        <li><a href="https://www.pexels.com/@creative-vix" target="_blank" rel="noopener noreferrer">Creative Vix</a></li>
+                        <li><a href="http://streetwill.co/" target="_blank" rel="noopener noreferrer">Streetwill</a></li>
+                        <li><a href="https://gratisography.com/" target="_blank" rel="noopener noreferrer">Gratisography</a></li>
+                        <li><a href="https://www.textures.com/" target="_blank" rel="noopener noreferrer">Textures</a></li>
+                        <li><a href="https://pixabay.com/" target="_blank" rel="noopener noreferrer">Pixabay</a></li>
+                        <li><a href="https://www.lifeofvids.com/" target="_blank" rel="noopener noreferrer">lifeofvids</a></li>
+                        <li><a href="https://www.lifeofpix.com/" target="_blank" rel="noopener noreferrer">lifeofpix</a></li>
+                        <li><a href="https://freephotos.cc/zh" target="_blank" rel="noopener noreferrer">freephotos</a></li>
+                        <li><a href="https://imagefinder.co/" target="_blank" rel="noopener noreferrer">Image Finder</a></li>
+                        <li><a href="https://zoommyapp.com/" target="_blank" rel="noopener noreferrer">Zoommy</a></li>
+                    </ul>
+                    <h3>视频</h3>
+                    <ul>
+                        <li><a href="https://mazwai.com/" target="_blank" rel="noopener noreferrer">mazwai</a></li>
+                        <li><a href="https://www.videvo.net/" target="_blank" rel="noopener noreferrer">videvo</a></li>
+                        <li><a href="https://www.pexels.com/videos/" target="_blank" rel="noopener noreferrer">pexels</a></li>
+                        <li><a href="https://www.openfootage.net/" target="_blank" rel="noopener noreferrer">openfootage</a></li>
+                        <li><a href="https://coverr.co/" target="_blank" rel="noopener noreferrer">Coverr</a></li>
+                        <li><a href="https://mixkit.co/free-stock-video/" target="_blank" rel="noopener noreferrer">mixkit</a></li>
+                    </ul>
+                    <h3>无背景免抠图</h3>
+                    <ul>
+                        <li><a href="https://pngimg.com/" target="_blank" rel="noopener noreferrer">Pngimg</a></li>
+                        <li><a href="https://www.stickpng.com/" target="_blank" rel="noopener noreferrer">Stickpng</a></li>
+                    </ul>
+                    <h3>其他</h3>
+                    <ul>
+                        <li><a href="https://www.irasutoya.com/" target="_blank" rel="noopener noreferrer">irasutoya <span class="name">Vtuber 常用人物素材</span></a></li>
+                    </ul>
+
+                </div>
+                <div class="list">
+                    <h3>图标</h3>
+                    <ul>
+                        <li><a href="https://remixicon.com/" target="_blank" rel="noopener noreferrer"><b>RemixIcon</b> <span class="name">中性风格图标</span></a></li>
+                        <li><a href="https://chuangzaoshi.com/icon/" target="_blank" rel="noopener noreferrer">StrawBerry Icon <span class="name">草莓图标</span></a></li>
+                        <li><a href="https://www.iconfont.cn" target="_blank" rel="noopener noreferrer">Iconfont <span class="name">阿里巴巴矢量图标库</span></a></li>
+                        <li><a href="https://github.com/edent/SuperTinyIcons" target="_blank" rel="noopener noreferrer">SuperTinyIcons <span class="name">常见网站和应用程序图标</span></a></li>
+                        <li><a href="https://simpleicons.org/zh-CN/" target="_blank" rel="noopener noreferrer">Simple Icons <span class="name">流行品牌的免费 SVG 图标库</span></a></li>
+                        <li><a href="https://github.com/google/material-design-icons" target="_blank" rel="noopener noreferrer">Material<span class="name">Gogole Material 图标</span></a></li>
+                        <li><a href="https://fontello.com/" target="_blank" rel="noopener noreferrer">Fontello <span class="name">图标字体生成器</span></a></li>
+                        <li><a href="https://www.flaticon.com/" target="_blank" rel="noopener noreferrer">FlatIcon</a></li>
+                        <li><a href="https://ikonate.com/" target="_blank" rel="noopener noreferrer">Ikonate</a></li>
+                        <li><a href="http://flat-icon-design.com/" target="_blank" rel="noopener noreferrer">FLAT ICON DESIGN</a></li>
+                        <li><a href="https://danklammer.com/bytesize-icons/" target="_blank" rel="noopener noreferrer">Bytesize</a></li>
+                        <li><a href="https://icomoon.io/app/#/select" target="_blank" rel="noopener noreferrer">icomoon</a></li>
+                        <li><a href="https://cssicon.space/#/" target="_blank" rel="noopener noreferrer">cssicon</a></li>
+                        <li><a href="https://feathericons.com/" target="_blank" rel="noopener noreferrer">Feather</a></li>
+                        <li><a href="https://getbootstrap.net/icons/" target="_blank" rel="noopener noreferrer">Bootstrap Icons</a></li>
+                        <li><a href="https://primer.style/octicons/" target="_blank" rel="noopener noreferrer">Octicons</a></li>
+                        <li><a href="https://icons8.com/animated-icons" target="_blank" rel="noopener noreferrer">icons8</a></li>
+                    </ul>
+                    <h3>矢量图</h3>
+                    <ul>
+                        <li><a href="https://undraw.co/" target="_blank" rel="noopener noreferrer">unDraw</a></li>
+                        <li><a href="https://icons8.com/ouch/" target="_blank" rel="noopener noreferrer">Ouch!</a></li>
+                        <li><a href="https://illlustrations.co/" target="_blank" rel="noopener noreferrer">illustrations</a></li>
+                        <li><a href="https://www.drawkit.com/free-illustrations" target="_blank" rel="noopener noreferrer">DrawKit</a></li>
+                        <li><a href="https://www.manypixels.co/gallery/" target="_blank" rel="noopener noreferrer">Manypixels</a></li>
+                        <li><a href="https://freebiesupply.com/" target="_blank" rel="noopener noreferrer">Freebie Supply</a></li>
+                        <li><a href="https://absurd.design/" target="_blank" rel="noopener noreferrer">Absurd Design</a></li>
+                        <li><a href="https://webkul.github.io/vivid/" target="_blank" rel="noopener noreferrer">vivid.js</a></li>
+                        <li><a href="https://iradesign.io/" target="_blank" rel="noopener noreferrer">IRA Design</a></li>
+                        <li><a href="https://www.humaaans.com/" target="_blank" rel="noopener noreferrer">Humaaans</a></li>
+                        <li><a href="https://interfacer.xyz/" target="_blank" rel="noopener noreferrer">interfacer</a></li>
+                        <li><a href="https://www.opendoodles.com/" target="_blank" rel="noopener noreferrer">Open Doodles</a></li>
+                        <li><a href="http://pictogram2.com" target="_blank" rel="noopener noreferrer">Human Pictogram 2.0</a></li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <h3>音频</h3>
+                    <ul>
+                        <li><a href="https://freepd.com/" target="_blank" rel="noopener noreferrer">FreePD <span class="name">公共领域音乐资源网站</span></a></li>
+                        <li><a href="https://audionautix.com/" target="_blank" rel="noopener noreferrer">Audionautix</a></li>
+                        <p class="name">是一个个人站，站长叫 Jason Shaw，网站上的所有音乐，从民谣到布鲁斯到 Hip Hop 到摇滚，全是他自己创作的，该网站的音乐里可以用于任何地方，但是必须标注该音乐由 Audionautix 网站提供。</p>
+                        <li><a href="https://www.looperman.com/loops" target="_blank" rel="noopener noreferrer">Looperman <span class="name">免费注册后即可下载音乐使用或上传自己的音乐。</span></a></li>
+                        <li><a href="https://freemusicarchive.org/" target="_blank" rel="noopener noreferrer">免费音乐档案 <span class="name">免费音乐和免版税音乐的第一资源。</span></a></li>
+                        <li><a href="https://freesound.org/" target="_blank" rel="noopener noreferrer">FreeSound</a></li>
+                        <p class="name">一个允许用户随意下载、上传音乐素材的网站，每条音频都有着单独的版权声明。</p>
+                        <li><a href="http://dig.ccmixter.org/" target="_blank" rel="noopener noreferrer">ccMixter</a></li>
+                        <p class="name">一个音乐人线上协作社区，它的模式是音乐人上传原创音乐片段，歌手上传自己唱的无伴奏歌曲，然后由制作人制作成完整的作品。</p>
+                        <li><a href="https://musopen.org/" target="_blank" rel="noopener noreferrer">musopen <span class="name">主要提供古典音乐资源，每条音频都有着单独的版权声明</span></a></li>
+                        <li><a href="https://cctrax.com/" target="_blank" rel="noopener noreferrer">CC TRAX</a></li>
+                        <li><a href="https://cctrax.com/creative-commons-rules)小讲座" target="_blank" rel="noopener noreferrer">每张专辑右侧的版权声明，以及该网站的[版权声明</a></li>
+                        <li><a href="https://www.jamendo.com/" target="_blank" rel="noopener noreferrer">Jamendo</a></li>
+                        <p class="name">个人免费，用于视频制作或其他商业用途需要遵守该网站的相关条例。</p>
+                        <li><a href="https://cn.imslp.org/wiki/Main_Page" target="_blank" rel="noopener noreferrer">国际乐谱库 <span class="name">全球最大的免费公共版权音乐网站</span></a></li>
+                        <li><a href="http://www.aigei.com/" target="_blank" rel="noopener noreferrer">爱给网 <span class="name">中国最大的数字娱乐免费素材下载</span></a></li>
+                        <li><a href="https://mixkit.co/free-stock-music/" target="_blank" rel="noopener noreferrer">mixkit <span class="name">For you to use in your next video project, for free!</span></a></li>
+                        <li><a href="https://icons8.com/music" target="_blank" rel="noopener noreferrer">icons8</a></li>
+                        <li><a href="https://musicmaker.site/" target="_blank" rel="noopener noreferrer">Music Maker</a></li>
+                        <li><a href="https://offers.adobe.com/en/na/audition/offers/audition_dlc.html" target="_blank" rel="noopener noreferrer">Adobe Audition Downloads <span class="name">Adobe 免费音乐素材库</span></a></li>
+                        <li><a href="https://radiooooo.com/" target="_blank" rel="noopener noreferrer">Radiooooo <span class="name">收集了很多经典老歌的服务</span></a></li>
+                    </ul>
+                    <h3>参考素材</h3>
+                    <ul>
+                        <li><a href="https://huaban.com/" target="_blank" rel="noopener noreferrer">花瓣网</a></li>
                     </ul>
                 </div>
             </div>
