--- a/favorites/software/code.html
+++ b/favorites/software/code.html
@@ -34,6 +34,8 @@
                         <li><a href="https://www.djangoproject.com/" target="_blank" rel="noopener noreferrer">Django</a></li>
                         <li><a href="https://uwsgi-docs.readthedocs.io/en/latest/WSGIquickstart.html" target="_blank" rel="noopener noreferrer">uWSGI</a></li>
                         <li><a href="https://www.psycopg.org/" target="_blank" rel="noopener noreferrer">Psycopg</a></li>
+                        <li><a href="https://flask.palletsprojects.com/" target="_blank" rel="noopener noreferrer">Flask</a></li>
+                        <li><a href="https://fastapi.tiangolo.com/zh/" target="_blank" rel="noopener noreferrer">FastAPI</a></li>
                         <li><a href="https://pypi.org/project/requests/" target="_blank" rel="noopener noreferrer">Requests</a></li>
                         <li><a href="https://www.selenium.dev/zh-cn/documentation/webdriver/getting_started/" target="_blank" rel="noopener noreferrer">Selenium</a></li>
                         <li><a href="https://doc.qt.io/qtforpython-6/" target="_blank" rel="noopener noreferrer">PySide / PyQt</a></li>
