--- a/favorites/materials/materials.html
+++ b/favorites/materials/materials.html
@@ -150,6 +150,8 @@
                     <h3>参考素材</h3>
                     <ul>
                         <li><a href="https://huaban.com/" target="_blank" rel="noopener noreferrer">花瓣网</a></li>
+                        <li><a href="https://www.behance.net/" target="_blank" rel="noopener noreferrer">Behance</a></li>
+                        <li><a href="https://www.gtn9.com/index.aspx" target="_blank" rel="noopener noreferrer">古田路9号</a></li>
                     </ul>
                 </div>
             </div>
