--- a/favorites/game/steam.html
+++ b/favorites/game/steam.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
-        <script src="js/vue.global.prod.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <title></title>
+        <script src="../../js/vue.global.prod.js"></script>
+        <link rel="stylesheet" href="../../css/style.css" />
+        <title>Steam | 阿源的收藏夹</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F3KXZRE7Z"></script>
         <script>
@@ -20,6 +20,42 @@
 
     <body>
         <div id="app">
+            <div class="head">
+                <div class="head_title">
+                    <h1>Steam</h1>
+                </div>
+            </div>
+            <div class="list">
+                <ul>
+                    <h3>Valve</h3>
+                    <li><a href="https://store.steampowered.com/app/570/" target="_blank" rel="noopener noreferrer">Dota 2</a></li>
+                    <li><a href="https://store.steampowered.com/app/550/" target="_blank" rel="noopener noreferrer">求生之路 2 <span class="name">Left 4 Dead 2</span></a></li>
+                    <h3>一些大作</h3>
+                    <li><a href="https://store.steampowered.com/app/271590/" target="_blank" rel="noopener noreferrer">Grand Theft Auto V</a></li>
+                    <li><a href="https://store.steampowered.com/app/1850570/" target="_blank" rel="noopener noreferrer">死亡搁浅 <span class="name">DEATH STRANDING</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/1091500/" target="_blank" rel="noopener noreferrer">赛博朋克 2077 <span class="name">Cyberpunk 2077</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/275850/" target="_blank" rel="noopener noreferrer">无人深空 <span class="name">No Man's Sky</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/582010/" target="_blank" rel="noopener noreferrer">怪物猎人：世界 <span class="name">Monster Hunter: World</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/8930/" target="_blank" rel="noopener noreferrer">文明5 <span class="name">Sid Meier's Civilization® V</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/289070/" target="_blank" rel="noopener noreferrer">文明6 <span class="name">Sid Meier’s Civilization® VI</span></a></li>
+                    <h3>也许有些小众</h3>
+                    <li><a href="https://store.steampowered.com/app/648580/" target="_blank" rel="noopener noreferrer">428：被封锁的涩谷 <span class="name">428: Shibuya Scramble</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/281990/" target="_blank" rel="noopener noreferrer">群星 <span class="name">Stellaris</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/1509510/" target="_blank" rel="noopener noreferrer">部落幸存者 <span class="name">Settlement Survival</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/312560/" target="_blank" rel="noopener noreferrer">迷城的国度 Next <span class="name">Xanadu Next</span></a></li>
+                    <h3>命运石之门</h3>
+                    <li><a href="https://store.steampowered.com/app/412830/" target="_blank" rel="noopener noreferrer">命运石之门 <span class="name">STEINS;GATE</span></a></li>
+                    <li><a href="https://store.steampowered.com/app/825630/" target="_blank" rel="noopener noreferrer">命运石之门 零<span class="name">STEINS;GATE 0</span></a></li>
+                    <h3>牧场物语</h3>
+                    <li><a href="https://store.steampowered.com/app/978780/" target="_blank" rel="noopener noreferrer">牧场物语 重聚矿石镇</a></li>
+                    <li><a href="https://store.steampowered.com/app/1392960/" target="_blank" rel="noopener noreferrer">牧场物语 橄榄镇与希望的大地</a></li>
+                    <li><a href="https://store.steampowered.com/app/2111170/" target="_blank" rel="noopener noreferrer">牧场物语 Welcome！美丽人生</a></li>
+                    <h3>符文工厂</h3>
+                    <li><a href="https://store.steampowered.com/app/2243710/" target="_blank" rel="noopener noreferrer">符文工厂3豪华版</a></li>
+                    <li><a href="https://store.steampowered.com/app/1580240/" target="_blank" rel="noopener noreferrer">符文工厂4豪华版</a></li>
+                    <li><a href="https://store.steampowered.com/app/1702330/" target="_blank" rel="noopener noreferrer">符文工厂5</a></li>
+                </ul>
+            </div>
         </div>
     </body>
     <script>
