--- a/favorites/game/xbox.html
+++ b/favorites/game/xbox.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
-        <script src="js/vue.global.prod.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <title></title>
+        <script src="../../js/vue.global.prod.js"></script>
+        <link rel="stylesheet" href="../../css/style.css" />
+        <title>Xbox | 阿源的收藏夹</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F3KXZRE7Z"></script>
         <script>
@@ -20,6 +20,16 @@
 
     <body>
         <div id="app">
+            <div class="head">
+                <div class="head_title">
+                    <h1>Xbox</h1>
+                </div>
+            </div>
+            <div class="list">
+                <ul>
+                    <li><a href="https://www.xbox.com/zh-HK/xbox-game-pass/games" target="_blank" rel="noopener noreferrer">Xbox Game Pass</a></li>
+                </ul>
+            </div>
         </div>
     </body>
     <script>
