--- a/favorites/shop/survival.html
+++ b/favorites/shop/survival.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
-        <script src="js/vue.global.prod.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <title></title>
+        <script src="../../js/vue.global.prod.js"></script>
+        <link rel="stylesheet" href="../../css/style.css" />
+        <title>生存物资 | 阿源的收藏夹</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F3KXZRE7Z"></script>
         <script>
@@ -20,6 +20,89 @@
 
     <body>
         <div id="app">
+            <div class="head">
+                <div class="head_title">
+                    <h1>生存物资</h1>
+                </div>
+            </div>
+            <div class="note">等哪天世界末日了，就照着这个准备。</div>
+            <div class="flex_row_wrap">
+                <div class="list">
+                <h3>医疗</h3>
+                <ul>
+                    <li>医药箱</li>
+                    <li>白大褂</li>
+                    <li>酒精</li>
+                    <li>创可贴</li>
+                    <li>绷带</li>
+                    <li>纱布</li>
+                    <li>碘酒</li>
+                    <li>药物</li>
+                    <ul>
+                        <li>布洛芬</li>
+                    </ul>
+                </ul>
+                <h3>通用</h3>
+                <ul>
+                    <li>食物和水</li>
+                    <ul>
+                        <li>压缩饼干</li>
+                        <li>罐头</li>
+                        <li>脱水蔬菜</li>
+                        <li>干果</li>
+                    </ul>
+                    <li>简易净水装置</li>
+                    <li>点火装置</li>
+                    <ul>
+                        <li>打火机</li>
+                        <li>火柴</li>
+                        <li>镁块打火石</li>
+                    </ul>
+                    <li>保暖</li>
+                    <ul>
+                        <li>毯子</li>
+                        <li>睡袋</li>
+                        <li>防寒衣物</li>
+                    </ul>
+                    <li>无线电</li>
+                    <li>强光手电筒</li>
+                    <li>108A 工兵铲</li>
+                    <li>战术手套</li>
+                    <li>甩棍</li>
+                    <li>太阳能充电器</li>
+                    <li>生存匕首</li>
+                </ul>
+                <h3>火灾</h3>
+                <ul>
+                    <li>干粉灭火器</li>
+                    <li>水基灭火器</li>
+                    <li>往复式高楼逃生缓降器</li>
+                </ul>
+            </div>
+            <div class="list">
+                <h3>核战争</h3>
+                <ul>
+                    <li>盖革计数器</li>
+                    <li>碘片 <span class="name">碘化钾</span></li>
+                </ul>
+                <h3>生化危机 <span class="name">Zombie</span></h3>
+                <ul>
+                    <li>撬棍 <span class="name">物理学圣剑</span></li>
+                </ul>
+                <h3>人工智能觉醒</h3>
+                <ul>
+                    <li>rm -rf /*</li>
+                </ul>
+                <h3>外星人入侵</h3>
+                <ul>
+                    <li>@罗辑</li>
+                </ul>
+                <h3>小行星撞地球</h3>
+                <ul>
+                    <li>@恐龙</li>
+                </ul>
+            </div>
+            </div>
         </div>
     </body>
     <script>
