--- a/favorites/index.html
+++ b/favorites/index.html
@@ -151,7 +151,7 @@
                     </a>
                 </div>
             </div>
-            <h2>购物</h2>
+            <!-- <h2>购物</h2>
             <div class="toolkit_card">
                 <div class="toolkit_flex">
                     <a href="./shop/to-do.html" title="一些想买但是还没买的东西。">
@@ -170,18 +170,10 @@
                             <p class="soft_name">好物推荐</p>
                         </div>
                     </a>
-                    <a href="./shop/survival.html" title="活下去！">
-                        <div class="item">
-                            <div class="soft_icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="72" height="72"><path d="M13.7678 12.2289L15.8892 14.3502C11.293 18.9464 5.63612 20.3606 2.10059 19.6535L17.6569 4.09717L19.7783 6.21849L13.7678 12.2289Z" fill="currentColor"></path></svg>
-                            </div>
-                            <p class="soft_name">生存物资</p>
-                        </div>
-                    </a>
                 </div>
-            </div>
+            </div> -->
             <h2>游戏</h2>
-            <div class="toolkit_card" style="padding-bottom: 50px;">
+            <div class="toolkit_card">
                 <div class="toolkit_flex">
                     <a href="./game/steam.html" title="不买立省100%">
                         <div class="item">
@@ -208,6 +200,19 @@
                         </div>
                     </a>
                 </div>
+            </div>
+            <h2>其他</h2>
+            <div class="toolkit_card" style="padding-bottom: 50px;">
+            <div class="toolkit_flex">
+                <a href="./shop/survival.html" title="活下去！">
+                    <div class="item">
+                        <div class="soft_icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="72" height="72"><path d="M13.7678 12.2289L15.8892 14.3502C11.293 18.9464 5.63612 20.3606 2.10059 19.6535L17.6569 4.09717L19.7783 6.21849L13.7678 12.2289Z" fill="currentColor"></path></svg>
+                        </div>
+                        <p class="soft_name">生存物资</p>
+                    </div>
+                </a>
+            </div>
             </div>
         </div>
     </body>
