--- a/favorites/software/code.html
+++ b/favorites/software/code.html
@@ -94,6 +94,9 @@
                         <li><a href="https://www.microsoft.com/zh-cn/sql-server/sql-server-downloads" target="_blank" rel="noopener noreferrer">SQL Server</a></li>
                         <li><a href="https://redis.io/" target="_blank" rel="noopener noreferrer">Redis</a></li>
                     </ul>
+                    <ul>
+                        <li><a href="https://github.com/dbeaver/dbeaver" target="_blank" rel="noopener noreferrer">DBeaver <span class="name">需要Java运行环境</span></a></li>
+                    </ul>
                     <h3>版本控制</h3>
                     <ul>
                         <li><a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer">Git</a></li>
