--- a/favorites/awesome/anime.html
+++ b/favorites/awesome/anime.html
@@ -68,12 +68,21 @@
                             <td class="center"></td>
                             <td><div class="star"><img src="../../icon/checkbox-line.svg"></div></td>
                         </tr>
+
+                        <tr>
+                            <td>2020年7月10日</td>
+                            <td><a href="https://bgm.tv/subject/296076" target="_blank"><b>租借女友 <span class="name">彼女、お借りします</span></b></a></td>
+                            <td class="tag">木之下和也，水原千鹤，一之濑千鹤，更科瑠夏</td>
+                            <td class="center"></td>
+                            <td><div class="star"><img src="../../icon/checkbox-line.svg"></div></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
             <!-- <h3>2022</h3> -->
             <!-- <h3>2021</h3> -->
-            <!-- <h3>2020</h3> -->
+            <h3>2020</h3>
+            <h1>七月</h1>
             <!-- <h3>2019</h3> -->
             <!-- <h3>2018</h3> -->
             <!-- <h3>2017</h3> -->
@@ -99,7 +108,7 @@
                             href: "https://bgm.tv/subject/401783",
                             img: "https://lain.bgm.tv/pic/cover/l/83/14/401783_Q3m8a.jpg",
                             week: "五",
-                            now: 0,
+                            now: 6,
                             max: 12
                         },
                         {
@@ -107,7 +116,7 @@
                             href: "https://bgm.tv/subject/425236",
                             img: "https://lain.bgm.tv/r/400/pic/cover/l/bb/bf/425236_3CtyP.jpg",
                             week: "六",
-                            now: 5,
+                            now: 7,
                             max: 12
                         },
                         {
@@ -115,7 +124,7 @@
                             href: "https://bgm.tv/subject/414461",
                             img: "https://lain.bgm.tv/pic/cover/l/c0/fe/414461_Shy9T.jpg",
                             week: "日",
-                            now: 4,
+                            now: 5,
                             max: 12
                         },
                         {
@@ -123,7 +132,7 @@
                             href: "https://bgm.tv/subject/408351",
                             img: "https://lain.bgm.tv/r/400/pic/cover/l/34/17/408351_R44A4.jpg",
                             week: "一",
-                            now: 5,
+                            now: 7,
                             max: 12
                         },
                         {
